# cool-server

./: .env.example  Cargo.toml  README.md  docker-compose.yml
.cargo/: cofig.toml
src/: config.rs  error.rs  main.rs
src/log/: mod.rs
src/migration/: error.rs  mod.rs  table_01_role.rs  table_02_user.rs  table_03_auth.rs
src/model/: error.rs  mod.rs  user.rs
src/mw/: mod.rs
src/router/: error.rs  mod.rs  routes_user.rs
src/utils/env/: error.rs  mod.rs
